# osml-imagery-toolkit

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PACKAGE_DESCRIPTION.md  README.md  environment-py310.yml  environment-py311.yml  environment-py312.yml  environment-py313.yml  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  copyright.yaml
_apidoc/: aws.html  aws.osml.features.feature_index.html  aws.osml.features.geolocation.html  aws.osml.features.html  aws.osml.features.imaged_feature_property_accessor.html  aws.osml.formats.html  aws.osml.formats.sicd.html  aws.osml.formats.sicd.models.html  aws.osml.formats.sicd.models.sicd_v1_2_1.html  aws.osml.formats.sicd.models.sicd_v1_3_0.html  aws.osml.formats.sidd.html  aws.osml.formats.sidd.models.external.html  aws.osml.formats.sidd.models.external.ism.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ism25_x.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ismclassification_all.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ismcomplies_with.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ismdissem.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ismfgiopen.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ismfgiprotected.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ismnon_ic.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ismnon_uscontrols.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ismowner_producer.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ismrel_to.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ismscicontrols.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.cvenum_ismsource_marked.html  aws.osml.formats.sidd.models.external.ism.schema.cvegenerated.html  aws.osml.formats.sidd.models.external.ism.schema.html  aws.osml.formats.sidd.models.external.ism_v13.html  aws.osml.formats.sidd.models.external.ism_v13.schema.html  aws.osml.formats.sidd.models.external.ism_v13.schema.ism.cvegenerated.cvenum_ism25_x.html  aws.osml.formats.sidd.models.external.ism_v13.schema.ism.cvegenerated.cvenum_ismatomic_energy_markings.html  (+67 more)
doc/: conf.py  (+1 more)
(+283 files in other folders)
