[metadata]
name = osml-imagery-toolkit
version = 1.0.0
description = Toolkit to work with imagery collected by satellites and UAVs
long_description = file: README.md
long_description_content_type = text/markdown
author = Amazon Web Services
author_email = todo-public-library-poc@amazon.com
license =
    MIT No Attribution

    Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.

    Permission is hereby granted, free of charge, to any person obtaining a copy of
    this software and associated documentation files (the "Software"), to deal in
    the Software without restriction, including without limitation the rights to
    use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
    the Software, and to permit persons to whom the Software is furnished to do so.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
    FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
    COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
    IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
    CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
project_urls =
    Source = https://github.com/aws/todo-public-library
    Tracker = https://github.com/aws/todo-public-library/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages=find_namespace:
python_requires = >=3.9
include_package_data = True

install_requires =
    numpy>=1.23.0
    scikit-optimize>=0.9.0
    cachetools>=5.3.0
    geojson>=3.0.0
    pyproj>=3.6.0

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
package_data =
    = ["py.typed"]

[options.extras_require]
gdal =
    gdal>=3.7.0
test =
    tox
